--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                             <div class="src src_s2"></div>
                         </div>
                         <div class="pic_s1">
-                            <img class="img_s2" src="./img/s6_img2.svg" alt="chef">                            
+                            <img class="img_s2" src="./img/s6_img2.png" alt="chef">                            
                             <div class="src"></div>
                         </div>
                         <div class="line_ban line_s2_c"></div>            
